Update name and description in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "name in manifest.json",
-  "description": "description in manifest.json",
+  "name": "Soma",
+  "description": "Make learning new languages a part of your daily routine.",
   "options_ui": {
     "page": "src/pages/options/index.html"
   },
